App::PerlCalc (1.0.2)

  * Fix test trying to run pc from the PATH instead of the local copy.

 -- David Caldwell <david@porkrind.org>  Thu, 12 Nov 2009 13:43:23 -0800

App::PerlCalc (1.0.1)

  * Fix some perldoc mistakes.
  * Add a README.

 -- David Caldwell <david@porkrind.org>  Thu, 12 Nov 2009 04:35:03 -0800

App::PerlCalc (1.0.0)

  * Initial CPAN release.

 -- David Caldwell <david@porkrind.org>  Wed, 11 Nov 2009 15:07:28 -0800