@@ -1,6 +1,6 @@
 ---
 name: App-PerlCalc
-version: 1.0.2
+version: 1.1.0
 author:
   - 'David Caldwell <david@porkrind.org>'
 abstract: A simple but feature filled command line Perl calculator
